--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=stamprally
+DB_USERNAME=ada
+DB_PASSWORD=lovelace
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,10 +32,11 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIAXJXJ5JIZ5DJHNAVW
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=ap-northeast-3
+AWS_BUCKET=ada-stamprally
+AWS_URL=https://ada-stamprally.s3.ap-northeast-3.amazonaws.com/
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
