--- a/laravel/Procfile
+++ b/laravel/Procfile
@@ -1,1 +1,1 @@
-web: vendor/bin/heroku-php-nginx -C ../RallyAPI/docker/nginx/default.conf public/
+web: vendor/bin/heroku-php-nginx -C nginx.conf public/
