--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3mg7QcKL0cnk5PEZ7Ir7qoBB9kr6tGhzOSgIfXGGBHM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
